Red Flag Design and Functionality done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -200,6 +200,12 @@
             android:name=".ui.mindaudit.MindAuditActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".ui.mindaudit.RedFlagAlertActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+
         <activity
             android:name=".ui.mindaudit.MindAuditResultActivity"
             android:exported="false"
