--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,6 +107,7 @@ android {
 
             buildConfigField "String", "GOOGLE_WEB_CLIENT_ID", "\"788352496395-ame1pvu6b0lve0g37kvnhuhl4kh2str8.apps.googleusercontent.com\""
             buildConfigField("String", "BASE_URL_AI", "\"https://ai-qa.rightlife.com/\"")
+            buildConfigField("String", "BASE_URL_AI_V2", "\"https://ai-qa.rightlife.com/v2/\"")
             buildConfigField("String", "CDN_URL", "\"https://d1sacaybzizpm5.cloudfront.net/\"")
             buildConfigField("String", "VIDEO_CDN_URL", "\"https://jetsynthesisqa-us-east-1.s3-accelerate.amazonaws.com/\"")
             // buildConfigField("String", "BASE_URL", "\"https://"")
