- Home tabs changed - Free Trial Banner added - Dashboard main cards design changed - track video, audio and series API called - Jump back recyclerview added in HomeExploreFragment - Jump back in Activity Added - Filter added in JumpInBackActivity - Service Pane even/odd design added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -387,6 +387,17 @@
             android:label="@string/title_activity_homepage"
             android:launchMode="singleTop"
             android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".newdashboard.BeginMyFreeTrialActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".newdashboard.JumpInBackActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+
         <activity
             android:name=".newdashboard.FacialScanReportDetailsActivity"
             android:exported="false"
