Following changes done - New Category design added - BookMarked API added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -227,6 +227,11 @@
             android:name=".ui.CategoryListActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".ui.NewCategoryListActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.healthaudit.HealthAuditFormActivity"
             android:exported="false"
