Saved Items added in Profile Setting

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -472,6 +472,10 @@
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".ui.profile_new.SavedItemListActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".ui.profile_new.ProfileSettingsActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
