--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -618,6 +618,7 @@
             android:name=".ui.context_screens.WelcomeRightLifeContextScreenActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
+        <activity android:name="com.jetsynthesys.rightlife.ui.mindaudit.MindAuditDass21DetailResultActivity" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
