--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,8 @@ android {
         applicationId "com.jetsynthesys.rightlife"
         minSdk 26
         targetSdk 35
-        versionCode 297
-        versionName "1.1.12"
+        versionCode 300
+        versionName "1.1.13"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -207,7 +207,7 @@ dependencies {
     //implementation(name: 'anura-opencv-4.5.1', ext: 'aar')
     /*implementation files('libs/anura-core-sdk-2.4.6.90.aar')
     implementation files('libs/anura-opencv-4.5.1.aar')*/
-    implementation files('libs/sonde_edge_sdk_v1.1.0_prod.aar')
+    //implementation files('libs/sonde_edge_sdk_v1.1.0_prod.aar')
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.1.0"
