DeepLinkRouterActivity added for test

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -221,6 +221,33 @@
             android:name=".ui.healthcam.basicdetails.HealthCamBasicDetailsNewActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".ui.deeplink.DeepLinkRouterActivity"
+            android:exported="true"
+            android:theme="@style/AppTheme">
+
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <!-- base domain -->
+                <data android:scheme="https" android:host="qa.rightlife.com" />
+
+                <!-- paths (Android equivalent of iOS components) -->
+                <data android:path="/my-health" />
+                <data android:path="/home" />
+                <data android:pathPrefix="/dashboard" />
+                <data android:path="/journal" />
+                <data android:path="/mind-audit" />
+                <data android:path="/meal-log" />
+                <data android:pathPrefix="/recipe" />
+                <!-- ... and so on -->
+            </intent-filter>
+        </activity>
+
         <activity
             android:name=".ui.CategoryListActivity"
             android:exported="false"
