feat: Implement Firebase Cloud Messaging for push notifications
This commit introduces Firebase Cloud Messaging (FCM) to handle push notifications. It includes a new `MyFirebaseMessagingService` to receive messages and a `NotificationHelper` to display them.

Changes:
- Add FCM dependency and service declaration in `AndroidManifest.xml`.
- Implement `MyFirebaseMessagingService` to process incoming remote messages.
- Create `NotificationHelper` to manage notification channels and display.
- Add FCM token logging in `SplashScreenActivity` for debugging.
- Update `NewSeriesDetailsActivity` to handle likes and display like counts.
- Mute/unmute sounds in `BreathworkPracticeActivity` when the app is paused/resumed.
- Various UI tweaks, including text styles, layout adjustments, and bug fixes in the home screen, series details, and jump-in-back sections.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -312,6 +312,8 @@ dependencies {
     implementation("com.facebook.android:facebook-core:17.0.0")
     implementation("com.facebook.android:facebook-login:17.0.0")
     implementation("com.facebook.android:facebook-share:17.0.0")
+// Notification
+    implementation "com.google.firebase:firebase-messaging"
 
 
 
