feat: Configure deep link host per build environment
Makes the deep link host domain configurable for different build types (e.g., "qa.rightlife.com" for QA and "rightlife.com" for production) using manifest placeholders.

Also includes the following changes:
- Redirects users from the `DeepLinkRouterActivity` to the login screen if they are not authenticated.
- Comments out Firebase Cloud Messaging (FCM) token logging.
- Modifies the username validation logic to prevent showing a toast for blank input.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,6 +111,7 @@ android {
             buildConfigField("String", "CDN_URL", "\"https://d1sacaybzizpm5.cloudfront.net/\"")
             buildConfigField("String", "VIDEO_CDN_URL", "\"https://jetsynthesisqa-us-east-1.s3-accelerate.amazonaws.com/\"")
             // buildConfigField("String", "BASE_URL", "\"https://"")
+            manifestPlaceholders = [ deeplinkHost: "qa.rightlife.com" ]
         }
 
         create("production") {
@@ -121,7 +122,7 @@ android {
             buildConfigField("String", "BASE_URL_AI", "\"https://ai.rightlife.com/\"")
             buildConfigField("String", "BASE_URL_AI_V2", "\"https://ai.rightlife.com/v2/\"")
             buildConfigField("String", "VIDEO_CDN_URL", "\"https://rightlife-prod-us-east-1.s3-accelerate.amazonaws.com/\"")
-
+            manifestPlaceholders = [ deeplinkHost: "rightlife.com" ]
         }
     }
 
