--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,9 @@
 [versions]
 agp = "8.7.3"
+googleGmsServices = "4.4.2"
+firebaseCrashlytics = "3.0.2"
+firebaseCrashlyticsSdk = "19.0.2"
+
 circleimageview = "3.1.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -35,8 +39,11 @@ core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx"
 play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
 play-services-fitness = { group = "com.google.android.gms", name = "play-services-fitness", version.ref = "playServicesFitness" }
 camera-view = { group = "androidx.camera", name = "camera-view", version.ref = "cameraView" }
+firebase-crashlytics-sdk = { group = "com.google.firebase", name = "firebase-crashlytics-ktx", version.ref = "firebaseCrashlyticsSdk" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+google-gms-services = { id = "com.google.gms.google-services", version.ref = "googleGmsServices" }
+firebase-crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "firebaseCrashlytics" }
 
