RazorPay Integration and New Design for Payment Flow

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -316,7 +316,6 @@ dependencies {
 // Notification
     implementation "com.google.firebase:firebase-messaging"
 
-
-
-
+    //razorPay
+    implementation 'com.razorpay:checkout:1.6.33'
 }
