--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -601,6 +601,10 @@
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".subscriptions.SubscriptionCheckoutActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".subscriptions.PlanInfoActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
@@ -677,6 +681,10 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/paths" />
         </provider>
+
+        <meta-data
+            android:name="com.razorpay.ApiKey"
+            android:value="@string/razorpay_key"/>
 
         <receiver
             android:name=".ui.affirmation.ReminderReceiver"
