Refactor: Move Razorpay key to build config
Moves the Razorpay API key from `strings.xml` and `AndroidManifest.xml` to `build.gradle` as a `buildConfigField`. This allows for different keys to be used for "qa" and "production" build flavors. The key is now accessed via `BuildConfig.RAZORPAY_KEY_ID`.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,6 +119,8 @@ android {
             buildConfigField("String", "VIDEO_CDN_URL", "\"https://jetsynthesisqa-us-east-1.s3-accelerate.amazonaws.com/\"")
             // buildConfigField("String", "BASE_URL", "\"https://"")
             manifestPlaceholders = [ deeplinkHost: "qa.rightlife.com" ]
+            buildConfigField "String", "RAZORPAY_KEY_ID", "\"rzp_test_RqEmfR1seJQbMB\""
+
         }
 
         create("production") {
@@ -130,6 +132,8 @@ android {
             buildConfigField("String", "BASE_URL_AI_V2", "\"https://ai.rightlife.com/v2/\"")
             buildConfigField("String", "VIDEO_CDN_URL", "\"https://rightlife-prod-us-east-1.s3-accelerate.amazonaws.com/\"")
             manifestPlaceholders = [ deeplinkHost: "rightlife.com" ]
+            buildConfigField "String", "RAZORPAY_KEY_ID", "\"rzp_live_S0CunrlrmrIF8U\""
+
         }
     }
 
