feat: Implement leaderboard UI
Adds the leaderboard feature, including the UI and necessary components.

- **LeaderboardActivity:** New activity to display the leaderboard with tabs for daily, weekly, and all-time rankings.
- **LeaderboardAdapter:** RecyclerView adapter to populate the leaderboard list.
- **UI Components:**
    - `activity_leaderboard.xml`: Layout for the leaderboard screen.
    - `user_rank_row.xml`: Layout for individual user rows.
    - `LeaderboardUiStyler`: A helper to apply specific styles for top-ranked users.
- **API:**
    - Adds `getLeaderboard` endpoint to `ApiService`.
- **Manifest:**
    - Registers `LeaderboardActivity`.
    - Minor code formatting and cleanup.
    DailyStreakActivity New activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,7 @@
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
     <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
     <uses-permission android:name="com.android.vending.BILLING" />
-    <uses-permission android:name="android.permission.VIBRATE"/>
-
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -24,51 +23,49 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <!--    <uses-permission android:name="com.samsung.android.health.permission.READ_HEALTH_DATA" />-->
-    <!--    <uses-permission android:name="com.samsung.android.health.permission.WRITE_HEALTH_DATA" />-->
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- <uses-permission android:name="com.samsung.android.health.permission.READ_HEALTH_DATA" /> -->
+    <!-- <uses-permission android:name="com.samsung.android.health.permission.WRITE_HEALTH_DATA" /> -->
     <uses-permission android:name="android.permission.health.READ_HEALTH_DATA_IN_BACKGROUND" />
     <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
     <uses-permission android:name="android.permission.BODY_SENSORS" />
     <uses-permission android:name="androidx.health.ACTION_READ_HEALTH_DATA" />
     <uses-permission android:name="android.permission.health.READ_TOTAL_CALORIES_BURNED" />
-
     <uses-permission android:name="android.permission.health.READ_ACTIVE_CALORIES_BURNED" />
-
     <uses-permission android:name="android.permission.health.READ_BASAL_METABOLIC_RATE" />
-
     <uses-permission android:name="android.permission.health.READ_DISTANCE" />
-
     <uses-permission android:name="android.permission.health.READ_STEPS" />
-
     <uses-permission android:name="android.permission.health.READ_HEART_RATE" />
-
     <uses-permission android:name="android.permission.health.READ_HEART_RATE_VARIABILITY" />
-
     <uses-permission android:name="android.permission.health.READ_RESTING_HEART_RATE" />
-
     <uses-permission android:name="android.permission.health.READ_RESPIRATORY_RATE" />
-
     <uses-permission android:name="android.permission.health.READ_OXYGEN_SATURATION" />
     <uses-permission android:name="android.permission.health.READ_BLOOD_PRESSURE" />
     <uses-permission android:name="android.permission.health.READ_WEIGHT" />
     <uses-permission android:name="android.permission.health.READ_BODY_FAT" />
     <uses-permission android:name="android.permission.health.READ_SLEEP" />
-    <uses-permission android:name="android.permission.health.READ_EXERCISE" />
-
-    <!-- Force remove any SMS / Call Log permissions coming from flavors or libraries -->
-    <uses-permission android:name="android.permission.RECEIVE_SMS" tools:node="remove" />
-    <uses-permission android:name="android.permission.READ_SMS" tools:node="remove" />
-    <uses-permission android:name="android.permission.SEND_SMS" tools:node="remove" />
-    <uses-permission android:name="android.permission.RECEIVE_WAP_PUSH" tools:node="remove" />
-
-    <uses-permission android:name="android.permission.READ_CALL_LOG" tools:node="remove" />
-    <uses-permission android:name="android.permission.WRITE_CALL_LOG" tools:node="remove" />
-
+    <uses-permission android:name="android.permission.health.READ_EXERCISE" /> <!-- Force remove any SMS / Call Log permissions coming from flavors or libraries -->
+    <uses-permission
+        android:name="android.permission.RECEIVE_SMS"
+        tools:node="remove" />
+    <uses-permission
+        android:name="android.permission.READ_SMS"
+        tools:node="remove" />
+    <uses-permission
+        android:name="android.permission.SEND_SMS"
+        tools:node="remove" />
+    <uses-permission
+        android:name="android.permission.RECEIVE_WAP_PUSH"
+        tools:node="remove" />
+    <uses-permission
+        android:name="android.permission.READ_CALL_LOG"
+        tools:node="remove" />
+    <uses-permission
+        android:name="android.permission.WRITE_CALL_LOG"
+        tools:node="remove" />
 
     <queries>
         <package android:name="com.google.android.apps.healthdata" />
+
         <intent>
             <action android:name="androidx.health.ACTION_SHOW_PERMISSIONS_RATIONALE" />
         </intent>
@@ -86,7 +83,16 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="35">
+        <activity
+            android:name=".ui.challenge.LeaderboardActivity"
+            android:exported="true"
+            android:screenOrientation="portrait">
+        <!--<intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>-->
+        </activity>
         <!-- xml -->
         <service
             android:name=".fcm.MyFirebaseMessagingService"
@@ -94,21 +100,16 @@
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
-        </service>
-
-        <!-- Meta SDK Configuration -->
+        </service> <!-- Meta SDK Configuration -->
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
-
         <meta-data
             android:name="com.facebook.sdk.ClientToken"
             android:value="@string/facebook_client_token" />
-
         <meta-data
             android:name="com.facebook.sdk.AutoLogAppEventsEnabled"
             android:value="true" />
-
         <meta-data
             android:name="com.facebook.sdk.AdvertiserIDCollectionEnabled"
             android:value="true" />
@@ -241,12 +242,10 @@
             android:name=".ui.mindaudit.MindAuditActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".ui.mindaudit.RedFlagAlertActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".ui.mindaudit.MindAuditResultActivity"
             android:exported="false"
@@ -263,12 +262,10 @@
             android:name=".ui.healthcam.basicdetails.HealthCamBasicDetailsNewActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".ui.deeplink.DeepLinkRouterActivity"
             android:exported="true"
             android:theme="@style/AppTheme">
-
             <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
 
@@ -282,12 +279,10 @@
                     android:scheme="https" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.CategoryListActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".ui.NewCategoryListActivity"
             android:exported="false"
@@ -376,11 +371,13 @@
             android:name=".ui.sdkpackage.HealthCamRecorderActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
-        <!--<activity
+        <!--
+<activity
             android:name=".ui.sdkpackage.VoiceRecorderActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
-        <activity android:name=".ui.sdkpackage.RlAnuraMeasurementActivity" />-->
+        <activity android:name=".ui.sdkpackage.RlAnuraMeasurementActivity" />
+        -->
         <activity
             android:name=".ui.jounal.JournalingActivity"
             android:exported="false"
@@ -452,17 +449,14 @@
             android:label="@string/title_activity_homepage"
             android:launchMode="singleTop"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".newdashboard.BeginMyFreeTrialActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".newdashboard.JumpInBackActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".newdashboard.FacialScanReportDetailsActivity"
             android:exported="false"
@@ -621,7 +615,6 @@
             android:name=".subscriptions.PlanInfoActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".ui.context_screens.MindAuditContextScreenActivity"
             android:exported="false"
@@ -645,7 +638,7 @@
         <activity
             android:name=".ui.context_screens.MRERAssessmentContextScreenActivity"
             android:exported="false"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.context_screens.AllInOnePlaceContextScreenActivity"
             android:exported="false"
@@ -682,12 +675,11 @@
             android:name=".ui.context_screens.WelcomeRightLifeContextScreenActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
-        <activity android:name="com.jetsynthesys.rightlife.ui.mindaudit.MindAuditDass21DetailResultActivity" />
-        <activity android:name="com.jetsynthesys.rightlife.ui.sdkpackage.RlAnuraMeasurementActivity" />
-        <activity android:name="com.jetsynthesys.rightlife.ui.new_design.MobileLoginActivity" />
-
+        <activity android:name=".ui.mindaudit.MindAuditDass21DetailResultActivity" />
+        <activity android:name=".ui.sdkpackage.RlAnuraMeasurementActivity" />
+        <activity android:name=".ui.new_design.MobileLoginActivity" />
         <activity
-            android:name="com.jetsynthesys.rightlife.ui.challenge.ChallengeActivity"
+            android:name=".ui.challenge.ChallengeActivity"
             android:exported="false"
             android:screenOrientation="portrait"/> >
 
@@ -695,7 +687,7 @@
             android:name="com.jetsynthesys.rightlife.ui.challenge.ChallengeEmptyActivity"
             android:exported="false"
             android:screenOrientation="portrait"/>
-
+        <activity android:name="com.jetsynthesys.rightlife.ui.challenge.DailyStreakActivity" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -706,7 +698,6 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/paths" />
         </provider>
-
 
         <receiver
             android:name=".ui.affirmation.ReminderReceiver"
