--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -146,11 +146,11 @@
             android:name=".ui.new_design.SplashScreenActivity"
             android:exported="true"
             android:screenOrientation="portrait">
-            <intent-filter>
+      <!--      <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
         </activity>
         <activity
             android:name=".ui.new_design.DataControlActivity"
@@ -190,8 +190,14 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.new_design.OnboardingQuestionnaireActivity"
-            android:exported="false"
-            android:screenOrientation="portrait" />
+            android:exported="true"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".ui.new_design.UserInterestActivity"
             android:exported="false"
