--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,14 +110,13 @@ android {
             buildConfigField "String", "GOOGLE_WEB_CLIENT_ID", "\"788352496395-ame1pvu6b0lve0g37kvnhuhl4kh2str8.apps.googleusercontent.com\""
             buildConfigField("String", "BASE_URL", "\"https://qa.rightlife.com/api/app/api/\"")
 
-            // buildConfigField("String", "BASE_URL", "\"https://"")
-
             buildConfigField "String", "GOOGLE_WEB_CLIENT_ID", "\"788352496395-ame1pvu6b0lve0g37kvnhuhl4kh2str8.apps.googleusercontent.com\""
             buildConfigField("String", "BASE_URL_AI", "\"https://ai-qa.rightlife.com/\"")
             buildConfigField("String", "BASE_URL_AI_V2", "\"https://ai-qa.rightlife.com/v2/\"")
-            buildConfigField("String", "CDN_URL", "\"https://d1sacaybzizpm5.cloudfront.net/\"")
-            buildConfigField("String", "VIDEO_CDN_URL", "\"https://jetsynthesisqa-us-east-1.s3-accelerate.amazonaws.com/\"")
-            // buildConfigField("String", "BASE_URL", "\"https://"")
+            //buildConfigField("String", "CDN_URL", "\"https://d1sacaybzizpm5.cloudfront.net/\"")
+            //buildConfigField("String", "VIDEO_CDN_URL", "\"https://jetsynthesisqa-us-east-1.s3-accelerate.amazonaws.com/\"")
+            buildConfigField "String", "CDN_URL", "\"https://d1uxs9zd0apq85.cloudfront.net/\""
+            buildConfigField("String", "VIDEO_CDN_URL", "\"https://rightlife-prod-us-east-1.s3-accelerate.amazonaws.com/\"")
             manifestPlaceholders = [ deeplinkHost: "qa.rightlife.com" ]
             buildConfigField "String", "RAZORPAY_KEY_ID", "\"rzp_test_RqEmfR1seJQbMB\""
 
@@ -127,9 +126,9 @@ android {
             dimension = "environment"
             buildConfigField "String", "GOOGLE_WEB_CLIENT_ID", "\"468192274227-0ptrdeff84u6b01ak5fmaiipbds91s4c.apps.googleusercontent.com\""
             buildConfigField "String", "BASE_URL", "\"https://app.rightlife.com/api/app/api/\""
-            buildConfigField "String", "CDN_URL", "\"https://d1uxs9zd0apq85.cloudfront.net/\""
             buildConfigField("String", "BASE_URL_AI", "\"https://ai.rightlife.com/\"")
             buildConfigField("String", "BASE_URL_AI_V2", "\"https://ai.rightlife.com/v2/\"")
+            buildConfigField "String", "CDN_URL", "\"https://d1uxs9zd0apq85.cloudfront.net/\""
             buildConfigField("String", "VIDEO_CDN_URL", "\"https://rightlife-prod-us-east-1.s3-accelerate.amazonaws.com/\"")
             manifestPlaceholders = [ deeplinkHost: "rightlife.com" ]
             buildConfigField "String", "RAZORPAY_KEY_ID", "\"rzp_live_S0CunrlrmrIF8U\""
