--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,8 +21,8 @@ android {
         applicationId "com.jetsynthesys.rightlife"
         minSdk 26
         targetSdk 35
-        versionCode 370
-        versionName "370"
+        versionCode 314
+        versionName "1.1.15"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -117,7 +117,7 @@ android {
             //buildConfigField("String", "VIDEO_CDN_URL", "\"https://jetsynthesisqa-us-east-1.s3-accelerate.amazonaws.com/\"")
             buildConfigField "String", "CDN_URL", "\"https://d1uxs9zd0apq85.cloudfront.net/\""
             buildConfigField("String", "VIDEO_CDN_URL", "\"https://rightlife-prod-us-east-1.s3-accelerate.amazonaws.com/\"")
-            manifestPlaceholders = [ deeplinkHost: "qa.rightlife.com" ]
+            manifestPlaceholders = [ deeplinkHost: "qa.rightlife.com" ,deeplinkHost_new: "app.rightlife.com"]
             buildConfigField "String", "RAZORPAY_KEY_ID", "\"rzp_test_RqEmfR1seJQbMB\""
 
         }
@@ -130,7 +130,7 @@ android {
             buildConfigField("String", "BASE_URL_AI_V2", "\"https://ai.rightlife.com/v2/\"")
             buildConfigField "String", "CDN_URL", "\"https://d1uxs9zd0apq85.cloudfront.net/\""
             buildConfigField("String", "VIDEO_CDN_URL", "\"https://rightlife-prod-us-east-1.s3-accelerate.amazonaws.com/\"")
-            manifestPlaceholders = [ deeplinkHost: "rightlife.com" ]
+            manifestPlaceholders = [ deeplinkHost: "rightlife.com" , deeplinkHost_new: "app.rightlife.com"]
             buildConfigField "String", "RAZORPAY_KEY_ID", "\"rzp_live_S0CunrlrmrIF8U\""
 
         }
