--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,7 +76,7 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/logo_rightlife_blue_qa"
+        android:icon="@drawable/logo_rightlife"
         android:label="@string/app_name"
         android:roundIcon="@drawable/circular_logo"
         android:supportsRtl="true"
@@ -265,6 +265,11 @@
                 <!-- base domain -->
                 <data
                     android:host="${deeplinkHost}"
+                    android:pathPattern="/.*"
+                    android:scheme="https" />
+                <!-- new host placeholder -->
+                <data
+                    android:host="${deeplinkHost_new}"
                     android:pathPattern="/.*"
                     android:scheme="https" />
             </intent-filter>
