- MainApplication issue resolved - crash on HomeDashboardFragment is handled - Video Player orientation issue resolved on Content Details Screen - Remove reminders from EatRight Assessment where we ask users to set meal timings. (dev) - remove last 2 screens - Done - Body Fat in Profile to be added similarly how Age, Weight, Height popups with Save CTA instead of Continue in the popup. Put body fat box below Weight’s - Done -

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -115,7 +115,8 @@
             android:name=".ui.contentdetailvideo.ContentDetailsActivity"
             android:exported="false"
             android:label="@string/title_activity_content_details"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".ui.contentdetailvideo.FullscreenVideoActivity"
             android:exported="false"
