--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,12 +15,12 @@ plugins {
 
 android {
     namespace 'com.jetsynthesys.rightlife'
-    compileSdk 35
+    compileSdk 36
 
     defaultConfig {
         applicationId "com.jetsynthesys.rightlife"
         minSdk 26
-        targetSdk 35
+        targetSdk 36
         versionCode 318
         versionName "1.1.18"
 
@@ -119,6 +119,9 @@ android {
             manifestPlaceholders = [ deeplinkHost: "qa.rightlife.com" ,deeplinkHost_new: "app.rightlife.com"]
             buildConfigField "String", "RAZORPAY_KEY_ID", "\"rzp_test_RqEmfR1seJQbMB\""
 
+            // App icon
+            manifestPlaceholders["appIcon"] = "@drawable/logo_rightlife_blue_qa"
+
         }
 
         create("production") {
@@ -131,6 +134,9 @@ android {
             buildConfigField("String", "VIDEO_CDN_URL", "\"https://rightlife-prod-us-east-1.s3-accelerate.amazonaws.com/\"")
             manifestPlaceholders = [ deeplinkHost: "rightlife.com" , deeplinkHost_new: "app.rightlife.com"]
             buildConfigField "String", "RAZORPAY_KEY_ID", "\"rzp_live_S0CunrlrmrIF8U\""
+
+            // App icon
+            manifestPlaceholders["appIcon"] = "@drawable/logo_rightlife"
 
         }
     }
