--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,13 +76,13 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/logo_rightlife"
+        android:icon="${appIcon}"
         android:label="@string/app_name"
         android:roundIcon="@drawable/circular_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
-        tools:targetApi="35">
+        tools:targetApi="36">
         <!-- xml -->
         <service
             android:name=".fcm.MyFirebaseMessagingService"
