Home Page Optimization - Refactored DeepLink logic into a centralized `DeepLinkTarget` enum and updated `DeepLinkRouterActivity` to use a slug-based routing system. - Centralized Health Connect permissions in `HealthConnectConstants` and improved the permission flow in `HomeDashboardFragment`, including a rationale dialog and persistent denial tracking. - Optimized `HomeDashboardFragment` and `HomeExploreFragment` UI logic by replacing boilerplate click listeners and manual delays with concurrent coroutine-based data fetching and helper extensions. - Added `showConfirmationDialog` to `DialogUtils` using `MaterialAlertDialogBuilder` for modern UI components. - Updated `build.gradle` and `AndroidManifest.xml` to support dynamic circular app icons via `manifestPlaceholders`. - Cleaned up unused imports, constants, and legacy code across dashboard and exploration fragments. - Added `tasks_completed_format` string resource for dynamic checklist progress reporting.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -121,6 +121,7 @@ android {
 
             // App icon
             manifestPlaceholders["appIcon"] = "@drawable/logo_rightlife_blue_qa"
+            manifestPlaceholders["appIconCircular"] = "@drawable/circular_logo_blue"
 
         }
 
@@ -137,6 +138,7 @@ android {
 
             // App icon
             manifestPlaceholders["appIcon"] = "@drawable/logo_rightlife"
+            manifestPlaceholders["appIconCircular"] = "@drawable/circular_logo"
 
         }
     }
