--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,14 +3,8 @@ plugins {
     alias(libs.plugins.kotlin.android)
     alias(libs.plugins.google.gms.services)
     alias(libs.plugins.firebase.crashlytics)
-    id 'kotlin-kapt'
-    id 'kotlin-parcelize'
-
-
-
-
-
-
+    alias(libs.plugins.kotlin.kapt)
+    alias(libs.plugins.kotlin.parcelize)
 }
 
 android {
